--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "type": "git",
     "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
   },
-  "author": "weirdcloud"
+  "author": "weirdcloud",
+  "description": "learning npm, node, express, mongodb, mongoose and api - fcc"
 }
